--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "cmgt-blockchain",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --watchAll --coverage --Verbose"     
+    "test": "jest --watchAll --coverage --Verbose"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@types/jest": "^29.5.12",
-    "vite": "^5.1.0",
-    "jest": "^29.7.0"
-  },
-  "dependencies": {
-    
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "vite": "^5.1.0"
   }
 }
